tests/language_modules/04_types/invalid_semantics/keyword_parameter_name.vf
module KeywordParameterName

procedure accept(module: Integer)
is
    check true
end accept

end KeywordParameterName